--- a/pom.xml
+++ b/pom.xml
@@ -53,18 +53,12 @@
   <name>Event Pump</name>
   <url>http://maven.apache.org</url>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <properties>
+    <maven.compiler.source>1.6</maven.compiler.source>
+    <maven.compiler.target>1.6</maven.compiler.target>
+    <maven.compiler.testSource>1.6</maven.compiler.testSource>
+    <maven.compiler.testTarget>1.6</maven.compiler.testTarget>
+  </properties>
 
   <dependencies>
     <dependency>
@@ -73,5 +67,8 @@
       <version>4.8.2</version>
       <scope>test</scope>
     </dependency>
+
+
   </dependencies>
+
 </project>
