--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <artifactId>epump</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  <inceptionYear>2014</inceptionYear>
 
     <licenses>
         <license>
